fix slideshow bug (not showing up the first time)

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  /* -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 /* border box setting ended */
 
@@ -42,6 +42,10 @@ body {
 /* Hide the images by default */
 .mySlides {
   display: none;
+}
+
+.firstSlide {
+	display: block;
 }
 
 /* Next & previous buttons */
@@ -110,9 +114,9 @@ body {
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-duration: 4s;
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 4s;
 }
 
 @-webkit-keyframes fade {
